vcs: remove usage of VcsContext from TabbedShowHistoryAction
GitOrigin-RevId: 262fc13082b4c977ff400602486095487a29502d